[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Thunder-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Upgrades/ThunderLord.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UpgradePool.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5.75, 7.58335 )

[node name="UpgradePool" type="Node2D"]
script = ExtResource( 3 )

[node name="ThunderLord" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="ThunderSprite" type="AnimatedSprite" parent="ThunderLord"]
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
animation = "Idle"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="ThunderLord" groups=["Weapon"]]
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThunderLord/Area2D"]
position = Vector2( 0.666667, 8.25002 )
shape = SubResource( 11 )
disabled = true

[node name="Timer" type="Timer" parent="ThunderLord"]
wait_time = 2.0
autostart = true

[node name="TimerStop" type="Timer" parent="ThunderLord"]
wait_time = 0.57
one_shot = true

[connection signal="timeout" from="ThunderLord/Timer" to="ThunderLord" method="_on_Timer_timeout"]
[connection signal="timeout" from="ThunderLord/TimerStop" to="ThunderLord" method="_on_TimerStop_timeout"]
